# mathext

./: .gitignore  .travis.yml  404.html  CNAME  Makefile  README.md  index.html  mkdocs.yml  site.webmanifest  sitemap.xml
.github/: PULL_REQUEST_TEMPLATE.md
CODE_OF_CONDUCT/: index.html
CONTRIBUTING/: index.html
commands/: .buildinfo  genindex.html  index.html  mathext.html  modules.html  objects.inv  py-modindex.html  search.html  searchindex.js
commands/.doctrees/: environment.pickle  index.doctree  mathext.doctree  modules.doctree
docs/: CONTRIBUTING.md  commands.md  index.md
docs-sphinx/rst/: conf.py  mathext.rst  modules.rst
search/: search_index.json
src/: setup.cfg
src/mathext/: __init__.py
