[metadata]
name = mathext
author = Richie Bendall
author_email = richiebendall@gmail.com
license = MIT License
description = An extension to the math library provided by Python.
url = https://github.com/Richienb/mathext
requires-python = >= 3.6
classifiers =
    Development Status :: 3 - Alpha
    Intended Audience :: Developers
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent
    Natural Language :: English
    Topic :: Scientific/Engineering :: Mathematics
    Topic :: Security :: Cryptography
    Topic :: Software Development :: Libraries
    Programming Language :: Python
    Programming Language :: Python :: 3 :: Only
    Programming Language :: Python :: 3.6
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Topic :: Software Development :: Libraries :: Python Modules

[options]
packages = mathext
